Code for fequents